WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51140
FormatBlock doesn't preserve typing style but it should
https://bugs.webkit.org/show_bug.cgi?id=51140
Summary
FormatBlock doesn't preserve typing style but it should
Ryosuke Niwa
Reported
2010-12-15 15:15:38 PST
InsertListCommand and IndentOutdentCommand both preserve typing style but FormatBlockCommand doesn't. This is a bug.
Attachments
fixes the bug
(3.48 KB, patch)
2010-12-15 16:06 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2010-12-15 16:06:37 PST
Created
attachment 76706
[details]
fixes the bug
Ryosuke Niwa
Comment 2
2010-12-15 16:08:46 PST
(In reply to
comment #1
)
> Created an attachment (id=76706) [details] > fixes the bug
It seems like there are some edge cases in which typing style isn't preserved. But we should address each of such edge case in a separate bug since InsertListCommand and IndentOutdentCommand seem to have similar issues.
WebKit Commit Bot
Comment 3
2010-12-23 18:14:42 PST
Comment on
attachment 76706
[details]
fixes the bug Clearing flags on attachment: 76706 Committed
r74601
: <
http://trac.webkit.org/changeset/74601
>
WebKit Commit Bot
Comment 4
2010-12-23 18:14:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug