2010-12-23  Ryosuke Niwa  <rniwa@webkit.org>

Reviewed by Darin Adler.

        FormatBlock doesn't preserve typing style but it should
        https://bugs.webkit.org/show_bug.cgi?id=51140

        Added a test to type text after bolding the typing style and executing a FormatBlock command.
        Because FormatBlock command preserves typing style, the typed text should be in bold.

        * editing/execCommand/format-block-typing-style.html: Added.
2010-12-23  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Darin Adler.

        FormatBlock doesn't preserve typing style but it should
        https://bugs.webkit.org/show_bug.cgi?id=51140

        Fixed the bug by making preserveTypingStyle return true.

        Test: editing/execCommand/format-block-typing-style.html

        * editing/FormatBlockCommand.h:
        (WebCore::FormatBlockCommand::preservesTypingStyle):

git-svn-id: svn://svn.chromium.org/blink/trunk@74601 bbb929c8-8fbe-4397-9dbb-9b2b20218538