third_party/WebKit/WebCore/editing/FormatBlockCommand.h
@@ -38,6 +38,8 @@ public:
     {
         return adoptRef(new FormatBlockCommand(document, tagName));
     }
+    
+    virtual bool preservesTypingStyle() const { return true; }
 
     static Element* elementForFormatBlockCommand(Range*);
     bool didApply() const { return m_didApply; }
